--- a/style.css
+++ b/style.css
@@ -6,6 +6,45 @@
 }
 
 body {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+.header-container {
+    background-color: #1F2937;
+    width: 100%;
+    height: 75px;
+}
+
+.header-body {
+   /* eventually make same color as header-container */
+    background-color: darkorchid;
+    width: 100%;
+    height: 350px;
+}
+
+.info-container {
+    background-color: aqua;
+    width: 100%;
+    height: 350px;
+}
+
+.quote-container {
+    background-color: #E5E7EB;
+    width: 100%;
+    height: 350px;
+}
+
+.signup-container {
+    background-color: aqua;
+    width: 100%;
+    height: 275px;
+}
+
+.footer {
+    background-color: #1F2937;
+    width: 100%;
+    height: 100px;
+    margin-top: auto;
 }
