--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-style: solid;
+    border-color: red;
 }
 
 body {
@@ -15,6 +17,27 @@ body {
     background-color: #1F2937;
     width: 100%;
     height: 75px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    font-weight: 700;
+    font-size: 24px;
+    color: #F9FAF8 ;
+}
+
+.links {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-right: 10px;
+    font-size: 18px;
+    color: #E5E7EB;
+
 }
 
 .header-body {
@@ -22,7 +45,28 @@ body {
     background-color: darkorchid;
     width: 100%;
     height: 350px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.body-container {
+    margin-left: 10px;
+}
+
+.title-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+.image-container {
+    margin-right: 10px;
+}
+
+
+
+
 
 .info-container {
     background-color: aqua;
