--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     padding: 0;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border-style: solid;
-    border-color: red;
+    /* border-style: solid;
+    border-color: red; */
+    
 }
 
 body {
@@ -42,7 +43,7 @@ body {
 
 .header-body {
    /* eventually make same color as header-container */
-    background-color: darkorchid;
+    background-color: #1F2937;
     width: 100%;
     height: 350px;
     display: flex;
@@ -52,16 +53,39 @@ body {
 
 .body-container {
     margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px
 }
 
 .title-text {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    width: 350px;
+}
+
+.text {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 18px;
+    color: #E5E7EB;
+    width: 460px;
+}
+
+.button {
+    text-align: center;
+    color: #F9FAF8;
+    background-color: #3882F6;
+    width: 150px;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 15px;
 }
 
 .image-container {
     margin-right: 10px;
+    color: #E5E7EB;
 }
 
 
