--- a/style.css
+++ b/style.css
@@ -152,14 +152,45 @@ body {
     text-align: center;
 }
 
-
-
-
 .quote-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
     background-color: #E5E7EB;
     width: 100%;
-    height: 200px;
+    height: 500px;
+    border-style: solid;
+    border-color: red;
 }
+
+.quote {
+    font-size: 36px;
+    font-weight: 200;
+    font-style: italic;
+    color: #1F2937 ;
+    border-style: solid;
+    border-color: red;
+    width: 780px;
+}
+
+.author {
+    display: flex;
+    justify-content: flex-end;
+    border-style: solid;
+    border-color: red;
+    font-weight: bolder;
+    font-size: 24px;
+    width: 780px;
+}
+
+.thor {
+    margin-right: 40px;
+}
+
+
+
 
 .signup-container {
     background-color: aqua;
