--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .links {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 30px;
     margin-right: 200px;
     font-size: 18px;
     color: #E5E7EB;
@@ -41,6 +41,11 @@ a {
     font-size: 18px;
     color: #E5E7EB;
     text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
 }
 
 .header-body {
@@ -60,10 +65,12 @@ a {
 }
 
 .title-text {
+    display: flex;
+    flex-wrap: wrap;
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
-    width: 350px;
+    width: 400px;
     margin-left: 220px;
 }
 
@@ -98,10 +105,15 @@ a {
     align-items: center;
     margin-right: 10px;
     color: #E5E7EB;
-    background-color: gray;
+    /* background-color: gray; */
     width: 475px;
     height: 210px;
     margin-right: 200px;
+}
+
+.image-container img {
+    width: 450px;
+    height: 250px;
 }
 
 .info-container {
@@ -123,7 +135,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 100px;
     width: 100%;
     height: 75%;
 }
@@ -134,6 +146,12 @@ a {
     flex-wrap: wrap;
     width: 180px;
     height: fit-content;
+    gap: 10px;
+}
+
+/* can almost say for sure that this is the worst way to align this item lol but it was quick */
+.box-text:nth-child(3) {
+    margin-top: -21px;
 }
 
 .box {
@@ -141,10 +159,10 @@ a {
     border-style: solid;
     border-width: 5px;
     border-radius: 10px;
-    height: 175px;
-    width: 175px;
+    height: 200px;
+    width: 100%;
     align-self: center;
-
+    object-fit: cover;
 }
 
 .sub-text {
@@ -156,10 +174,14 @@ a {
 .quote-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
     flex-wrap: wrap;
-    background-color: #E5E7EB;
+    /* background-color: #E5E7EB; */
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(Images/Studious\ Hasbulla.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     width: 100%;
     height: 500px;
 }
@@ -168,7 +190,7 @@ a {
     font-size: 36px;
     font-weight: 200;
     font-style: italic;
-    color: #1F2937 ;
+    color: #F9FAF8;
     width: 780px;
 }
 
@@ -178,6 +200,9 @@ a {
     font-weight: bolder;
     font-size: 24px;
     width: 780px;
+    margin-bottom: 20px;
+    color: #F9FAF8;
+    margin-right: 10px;
 }
 
 .thor {
